--- a/index.html
+++ b/index.html
@@ -362,13 +362,13 @@
       </div>
 
       <!-- 이동수단 정보 -->
-      <!-- <div class="animate-on-scroll">
+      <div class="animate-on-scroll">
         <div>
           <img src="img/location.png" alt="이동수단" style="width: 100%; height: 100%" />
         </div>
-      </div> -->
+      </div>
 
-      <!-- <section id="locationMoveSection" class="flex justify-center">
+      <section id="locationMoveSection" class="flex justify-center">
           <div class="animate-on-scroll">
             <div id="locationMoveBox" class="inline-block">
               <p id="locationMoveTitleInfo">무료 셔틀 버스</p>
@@ -393,7 +393,7 @@
               </p>
             </div>
           </div>
-        </section> -->
+        </section>
 
       <!-- 계좌번호 -->
       <section id="accountNumberSection">
