--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
         </div>
       </div>
 
-      <section id="locationMoveSection" class="flex justify-center">
+      <!-- <section id="locationMoveSection" class="flex justify-center">
           <div class="animate-on-scroll">
             <div id="locationMoveBox" class="inline-block">
               <p id="locationMoveTitleInfo">무료 셔틀 버스</p>
@@ -393,7 +393,7 @@
               </p>
             </div>
           </div>
-        </section>
+        </section> -->
 
       <!-- 계좌번호 -->
       <section id="accountNumberSection">
