--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
               </li>
               <li>
                 <strong>혼주 정순자</strong>
-                <p>우리은행 1002-845-2795258</p>
+                <p>우리은행 1002-845-279258</p>
                 <div style="display:flex;gap:10px"><button type="button"
                     style="width:calc(100% - 5px);color:#817b7b;font-size:13px;border:1px solid #cdcdcd;border-radius:5px;margin-top:10px;padding:5px 0;height: 40px"
                     class="jsx-3433029997 button"><svg width="16" height="16" viewBox="0 0 20 20" fill="none"
